--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,4 +1,11 @@
 .navbar{
-    background-color: transparent;
+    background-color: #F5F2E9;
+    width: 100%;
+    height: 60px;
     position: fixed;
+    top: 0;
+    padding: 0;
+}
+.navbar ul{
+    margin: 0;
 }
