--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-.navbar{
+.navbar-section{
     background-color: #F5F2E9;
     width: 100%;
     height: 60px;
@@ -6,6 +6,37 @@
     top: 0;
     padding: 0;
 }
+.navbar{
+    width: 80%;
+    margin: auto;
+}
+.navbar nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+}
+.menu-bar ul{
+    display: flex;
+    justify-content: center;
+}
+.menu-bar ul li{
+    padding-left: 40px;
+}
+.navbar nav a h1{
+    padding: 0;
+    margin: 0;
+}
 .navbar ul{
     margin: 0;
+    list-style-type: none;
+}
+.navbar ul a{
+    text-decoration: none;
+}
+.logOut{
+    border: none;
+    background-color: transparent;
+    font-weight: 600;
+    font-size: 15px;
 }
